# Social_website

./: pyproject.toml
bookmarks/account/: forms.py  urls.py  views.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: login.html
bookmarks/bookmarks/: settings.py
